# Eye_fatigue_agent

./: .env.example  .gitignore  OVERVIEW.html  README.dev.md  README.md  REQUIREMENTS.html  progress.html  pyproject.toml  requirements.txt
evaluation/: ablation.py  metrics.py
scripts/: demo_end_to_end.py  ingest_knowledge.py  init_db.sql  run_single_case.py
scripts/knowledge_docs/: accommodative_dysfunction_placeholder.md  cvs_guideline_placeholder.md  dry_eye_placeholder.md
src/: __init__.py  config.py  graph.py  llm.py  main.py  state.py
src/agents/: __init__.py  case_library.py  consistency.py  diagnosis.py  feature_aggregator.py  intake.py  report.py  retrieval.py  vision.py
src/prompts/: diagnosis_system.md  intake_system.md  report_doctor_system.md  report_patient_system.md
src/services/: vision_api.py
src/tools/: case_db.py  rag_retriever.py  vision_service_client.py
tests/: test_each_agent.py  test_state.py
tests/fixtures/: mock_state.py
